# bmi088-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
examples/: embassy_spi.rs
src/: acc_impl.rs  gyro_impl.rs  interface.rs  lib.rs  register_address.rs
tests/: integration.rs
