[package]
name = "bmi088"
version = "0.1.0"
authors = ["Chang Xu <xuxchang@hotmail.com>"]
repository = "https://github.com/XxChang/bmi088-rs"
license = "Apache-2.0"
description = "A platform agnostic driver to interface with the BMI088 (accelerometer and gyroscope) written in Rust."
readme = "README.md"
keywords = ["bmi088", "i2c", "spi", "driver", "embedded-hal", "no_std", "accelerometer", "gyroscope"]
categories = ["no-std", "embedded", "hardware-support"]
homepage = "https://github.com/XxChang/bmi088-rs"
documentation = "https://docs.rs/bmi088"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
defmt = { version = "0.3.10", optional = true }
tock-registers = "0.9.0"
embedded-hal-async = "1.0.0"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-executor = { version = "0.6.3", git = "https://github.com/embassy-rs/embassy.git", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { version = "*", git = "https://github.com/embassy-rs/embassy.git" }

[lib]
harness = false

[profile.dev]
debug = 2

[features]
default = ["defmt-03"]
defmt-03 = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03"]
